refactor(auth): remove public registration
